--- a/style.css
+++ b/style.css
@@ -38,5 +38,12 @@
 }
 
 
-
+@media screen and (max-width: 500px){
+    .btn{
+        font-size: 2rem;
+    }
+    .info, .info_2{
+        font-size: 1.6rem;
+    }
+}
 
