--- a/style.css
+++ b/style.css
@@ -40,10 +40,11 @@
 
 @media all and (max-width: 800px){
     .btn{
-        font-size: 4rem;
+        font-size: 3rem;
+        background-color: greenyellow;
     }
     .info, .info_2{
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 }
 
