--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
     margin-left: 20px;
     font-family: sans-serif;
     position: absolute;
-    left: 48%;
+    left: 50%;
+    transform: translateX(-50%);
     bottom: 100px;
     border: 0;
     
