--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
     transition: 1s all;
 }
 .btn{
-    font-size: 1.2rem;
-    background-color: coral;
+    font-size: 2rem;
+    background-color: aliceblue;
     padding: 10px 20px;
     margin-left: 20px;
     font-family: sans-serif;
