--- a/style.css
+++ b/style.css
@@ -1,105 +1,159 @@
 body{
-    background-image: url(bg.jpeg);
-    background-size: cover;
-}
-.all{
+    margin: 0;
+    padding: 0;
+    height: 100vh;
     display: flex;
-    justify-content:space-around;
-    align-items: center;
-    flex-wrap: wrap;
+    flex-direction: column;
 }
-.col_1,
-.col_2{
-    width: 200px;
-    height: 200px;
-/*    border: 1px solid #000;*/
-    color: white;
-    transition: 0.3s;
-    position: relative;
-    border-radius: 5px;
-    box-shadow: 0 10px 10px -5px #333;
+.gradient-box{
+    height: 45%;
+    background-color: green;
+    box-shadow: 0 2px 20px #333;
+    z-index: 10;
+    background-image: linear-gradient(30deg, #ba2eac, #2ea5ba);
+}
+
+
+
+.menu{
+    height: 45%;
+    background-image: radial-gradient(#418ff4, #416af4);
+    z-index: 1;
     overflow: hidden;
-    background-color: #fff;
 }
-.op{
-    background-color: rgba(255,255,255,0.7);
-    width: 100%;
-    height: 20%;
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.col_1-info,
-.col_2-info{
-    color: #000;
-    text-transform: uppercase;
-}
-
-.box{
-    width: 60%;
-    height: 500px;
-    border: 1px solid #000;
+.menu-options{
     position: relative;
-    background-color: #fff;
-}
-
-.content_1{
-    position: absolute;
-    width: 100%;
+    bottom: -100%;
+    transition: 0.5s;
+    padding: 0;
+    margin: 0;
     height: 100%;
-    opacity: 1;
-    transition: 0.3s linear;
+    background-color: rgb(0,0,0);
+    z-index: 100;
 }
-.content_2{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: 0.3s linear;
+.menu-options-active{
+    bottom: 0;
 }
 
-.a{
-    opacity: 1;
-}
-.b{
-    opacity: 0;
-}
 
-.btn-cnt{
-    display: flex;
-    justify-content: center;
-}
-
-.btn{
-    padding: 10px 20px;
-    margin: 50px;
-    width: 200px;
+.menu-options li{
+    height: 33.33333%;
     box-sizing: border-box;
-    border-radius: 10px;
-    background-image: linear-gradient(to right, #517fff, #2dc89a);
-    font-size: 1.4rem;
+}
+.menu-options li:nth-child(1){
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #fff;
+}
+.menu-options li:nth-child(2){
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #fff;
+}
+.menu-options li:nth-child(3){
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+}
+
+.menu-options a{
     color: #fff;
-    font-family: sans-serif;
+    text-decoration: none;
     text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: 2px;
-    box-shadow: 5px 5px 8px 2px #333;
-    border: 0;
+    letter-spacing: 1px;
+    font-family: sans-serif;
+    display: block;
+    text-align: center;
+    height: 100%;
 }
-.btn-click{
-    box-shadow: 0 0 8px 2px #333;
+
+/*--------------------------------------------------------------------*/
+
+.option{
+    display: none;
+    height: 100%;
+    flex-direction: column;
+    width: 100%;
+}
+.option-active{
+    display: flex;
+    position: relative;
+    top: -100%;
+}
+
+
+
+
+
+
+.color-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 70%;
+}
+.color-box input{
+    width: 80%;
+/*    padding: 10px 0;*/
+}
+.colors{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 30%;
+}
+.colors button{
+    background-color: greenyellow;
+    border: 1px solid transparent;
+    border-radius: 15px;
+    width: 30%;
+    height: 60%;
+}
+
+.buttons{
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+/*    background-color: #000;*/
+    padding: 5px;
+    box-sizing: border-box;
+/*    background-image: linear-gradient(to bottom, #416af4, #172254);*/
+    background-image: url(thumb-1920-349131.jpg);
+    background-size: cover;
+/*    box-shadow: 0 -2px 8px #333;*/
+    z-index: 13;
+}
+.buttons .options,
+.buttons .random{
+    border: 2px solid orange;
+/*    background-color: transparent;*/
+    background-color: rgba(0,0,0,0.5);
+    border-radius: 20px;
+    color: #fff;
     font-size: 1.2rem;
-    padding: 12px 20px;
-    background-image: linear-gradient(to bottom, #2dc89a, #517fff);
+}
+.buttons .options{
+    width: 30%;
 }
 
-
-
-.in-box{
-    width: 200px;
-    height: 200px;
-    border: 1px solid black;
+.buttons .random{
+    width: 60%;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
+@media screen and (orientation:landscape) {
+    body{
+        flex-wrap: wrap;
+    }
+    .gradient-box{
+        height: 100%;
+        width: 50%;
+        box-shadow: none;
+    }
+    .menu{
+        height: 85%;
+        width: 50%;
+    }
+    .buttons{
+        height: 15%;
+    }
+}
