--- a/style.css
+++ b/style.css
@@ -7,14 +7,11 @@ body{
 }
 .gradient-box{
     height: 45%;
-    background-color: green;
-    box-shadow: 0 2px 20px #333;
+/*    box-shadow: 0 2px 20px #333;*/
     z-index: 10;
     background-image: linear-gradient(30deg, #ba2eac, #2ea5ba);
 }
-
-
-
+/*--------------------------------------------------------------------*/
 .menu{
     height: 45%;
     background-image: radial-gradient(#418ff4, #416af4);
@@ -34,16 +31,11 @@ body{
 .menu-options-active{
     bottom: 0;
 }
-
-
 .menu-options li{
     height: 33.33333%;
     box-sizing: border-box;
 }
-.menu-options li:nth-child(1){
-    border-top: 1px solid #000;
-    border-bottom: 1px solid #fff;
-}
+.menu-options li:nth-child(1),
 .menu-options li:nth-child(2){
     border-top: 1px solid #000;
     border-bottom: 1px solid #fff;
@@ -52,7 +44,6 @@ body{
     border-top: 1px solid #000;
     border-bottom: 1px solid #000;
 }
-
 .menu-options a{
     color: #fff;
     text-decoration: none;
@@ -63,9 +54,7 @@ body{
     text-align: center;
     height: 100%;
 }
-
 /*--------------------------------------------------------------------*/
-
 .option{
     display: none;
     height: 100%;
@@ -77,69 +66,71 @@ body{
     position: relative;
     top: -100%;
 }
-
-
-
-
-
-
-.color-box{
+/*--------------------------------------------------------------------*/
+.colors{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.colors-box-btn{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 25%;
+}
+.colors-box-input{
+    visibility: hidden;
+    height: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;
-    height: 70%;
 }
-.color-box input{
-    width: 80%;
-/*    padding: 10px 0;*/
-}
-.colors{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 30%;
+.colors-box-input-active{
+    visibility: visible;
+    height: 75%;
 }
 .colors button{
-    background-color: greenyellow;
+    background-color: #ccc;
     border: 1px solid transparent;
     border-radius: 15px;
-    width: 30%;
-    height: 60%;
+    width: 40%;
+    height: 70%;
+    transition: 0.5s;
 }
-
+.colors .btn-active{
+    background-color: #49e53d;
+}
+.colors input{
+    width: 90%;
+}
+/*--------------------------------------------------------------------*/
 .buttons{
     height: 10%;
     display: flex;
     justify-content: space-between;
-/*    background-color: #000;*/
     padding: 5px;
     box-sizing: border-box;
-/*    background-image: linear-gradient(to bottom, #416af4, #172254);*/
     background-image: url(thumb-1920-349131.jpg);
     background-size: cover;
-/*    box-shadow: 0 -2px 8px #333;*/
     z-index: 13;
 }
-.buttons .options,
+.buttons .menu-button,
 .buttons .random{
     border: 2px solid orange;
-/*    background-color: transparent;*/
     background-color: rgba(0,0,0,0.5);
     border-radius: 20px;
     color: #fff;
     font-size: 1.2rem;
 }
-.buttons .options{
+.buttons .menu-button{
     width: 30%;
 }
-
 .buttons .random{
     width: 60%;
     text-transform: uppercase;
     letter-spacing: 1px;
 }
-
+/*--------------------------------------------------------------------*/
 @media screen and (orientation:landscape) {
     body{
         flex-wrap: wrap;
