--- a/style.css
+++ b/style.css
@@ -55,13 +55,13 @@ body{
     height: 100%;
 }
 /*--------------------------------------------------------------------*/
-.option{
+div .option{
     display: none;
     height: 100%;
     flex-direction: column;
     width: 100%;
 }
-.option-active{
+div .option-active{
     display: flex;
     position: relative;
     top: -100%;
@@ -69,7 +69,6 @@ body{
 /*--------------------------------------------------------------------*/
 .colors{
     width: 100%;
-    display: flex;
     flex-wrap: wrap;
 }
 .colors-box-btn{
@@ -84,6 +83,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
 }
 .colors-box-input-active{
     visibility: visible;
@@ -102,6 +102,50 @@ body{
 }
 .colors input{
     width: 90%;
+}
+/*--------------------------------------------------------------------*/
+.rotate{
+    justify-content: center;
+    align-items: center;
+}
+.rotate-box{
+    background-color: transparent;
+    border: 5px solid rgba(250,250,250,0.3); 
+    border-radius: 50%;
+    width: 110px;
+    height: 110px;
+/*    position: relative;*/
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+}
+.rotate-content{
+    width: 25px;
+    height: 130px;
+/*    background-color: aqua;*/
+    position: relative;
+    top: -14px;
+/*    animation: anime 5s linear infinite;*/
+}
+.rotate-pointer{
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: red;
+    
+}
+.rotate-angle{
+    width: 50px;
+    height: 30px;
+    position: absolute;
+    bottom: 45%;
+    font-size: 2rem;
+    color: rgba(255,255,255,0.5);
+}
+@keyframes anime{
+    100%{
+        transform: rotate(360deg);
+    }
 }
 /*--------------------------------------------------------------------*/
 .buttons{
@@ -147,4 +191,21 @@ body{
     .buttons{
         height: 15%;
     }
+}
+
+
+
+#copy{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: pink;
+}
+
+.aaa{
+    width: 200px;
+    height: 160px;
+    background-color: blue;
+    border: 1px solid #fff;
+    box-sizing: border-box;
 }
