--- a/style.css
+++ b/style.css
@@ -112,41 +112,28 @@ div .option-active{
     background-color: transparent;
     border: 5px solid rgba(250,250,250,0.3); 
     border-radius: 50%;
-    width: 110px;
-    height: 110px;
-/*    position: relative;*/
     box-sizing: border-box;
     display: flex;
     justify-content: center;
 }
 .rotate-content{
-    width: 25px;
-    height: 130px;
-/*    background-color: aqua;*/
+    width: 2px;
     position: relative;
-    top: -14px;
-/*    animation: anime 5s linear infinite;*/
+    top: -5px;
+/*    background-color: aqua;*/
 }
+
 .rotate-pointer{
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     background-color: red;
-    
+    position: relative;
+    right: 15px;
+    bottom: 12px;
+    box-shadow: 0 0 4px #fff;
 }
-.rotate-angle{
-    width: 50px;
-    height: 30px;
-    position: absolute;
-    bottom: 45%;
-    font-size: 2rem;
-    color: rgba(255,255,255,0.5);
-}
-@keyframes anime{
-    100%{
-        transform: rotate(360deg);
-    }
-}
+
 /*--------------------------------------------------------------------*/
 .buttons{
     height: 10%;
@@ -195,6 +182,7 @@ div .option-active{
 
 
 
+/*
 #copy{
     display: flex;
     justify-content: center;
@@ -208,4 +196,4 @@ div .option-active{
     background-color: blue;
     border: 1px solid #fff;
     box-sizing: border-box;
-}
+}*/
