--- a/style.css
+++ b/style.css
@@ -77,15 +77,14 @@ div .option-active{
     align-items: center;
     height: 25%;
 }
-.colors-box-input{
+.colors-box{
     visibility: hidden;
     height: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
 }
-.colors-box-input-active{
+.colors-box-active{
     visibility: visible;
     height: 75%;
 }
@@ -102,6 +101,28 @@ div .option-active{
 }
 .colors input{
     width: 90%;
+    margin: 0;
+}
+.colors-box-set{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 95%;
+    height: 33.333%;
+}
+.color-item{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
+.color-red{
+    background-color: #ff0000;
+}
+.color-green{
+    background-color: #00ff00;
+}
+.color-blue{
+    background-color: #0000ff;
 }
 /*--------------------------------------------------------------------*/
 .rotate{
@@ -123,19 +144,25 @@ div .option-active{
 /*    background-color: aqua;*/
 }
 .rotate-pointer{
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     background-color: red;
     position: relative;
-    right: 15px;
-    bottom: 12px;
+    right: 20px;
+    bottom: 15px;
     box-shadow: 0 0 4px #fff;
 }
-.rotate-info-angle{
+.rotate-angle-box{
     position: absolute;
     color: #fff;
     font-size: 2rem;
+    transform: translate(10px, -5px);
+}
+.rotate-angle-box-ring{
+    position: relative;
+    top: -12px;
+    left: -10px;
 }
 /*--------------------------------------------------------------------*/
 .buttons{
@@ -144,8 +171,7 @@ div .option-active{
     justify-content: space-between;
     padding: 5px;
     box-sizing: border-box;
-    background-image: url(thumb-1920-349131.jpg);
-    background-size: cover;
+    background-color: #333;
     z-index: 13;
 }
 .buttons .menu-button,
@@ -182,3 +208,50 @@ div .option-active{
         height: 15%;
     }
 }
+
+#copy{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+/*
+.textarea-copy{
+    margin: 5px;
+    width: 95%;
+    height: 60%;
+    white-space: nowrap;
+    overflow-x: scroll;
+    resize: none;
+}
+*/
+.copy-btn{
+    width: 30%;
+    border: 2px solid royalblue;
+    border-radius: 10px;
+    padding: 5px;
+    font-size: 1.4rem;
+    background-color: royalblue;
+    color: #fff;
+    margin-top: 20px;
+    transition: 0.3s;
+    cursor: pointer;
+}
+.copy-btn:focus{
+    color: royalblue;
+    background-color: #fff;
+}
+.textarea-copy{
+    box-sizing: border-box;
+    padding: 5px;
+    border-radius: 4px;
+    margin: 5px;
+    width: 95%;
+    height: 40%;
+    background-color: #fff;
+    color: #000;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+    font-family: sans-serif;
+}
+
